# monatsziele

./: .angulardoc.json  .gitignore  AmbitionManagement.code-workspace  Monatsziele.Api.csproj  Monatsziele.Api.sln  README.md  Startup.cs  angular.json  app.py  monatsziele.sln  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
AmbitionJournal/: AmbitionJournal.csproj  Program.cs  Startup.cs
AmbitionJournal/Controllers/: AmbitionController.cs  AmbitionsController.cs  HomeController.cs  ValuesController.cs
AmbitionJournal/EventStore/: IEventStore.cs  InMemoryEventStore.cs
AmbitionJournal/Events/: AmbitionCreatedEvent.cs  Event.cs
AmbitionJournalRazor/: AmbitionJournalRazor.csproj  Program.cs  Startup.cs
AmbitionJournalTests/: AmbitionControllerTests.cs  AmbitionJournalTests.csproj
AmbitionManagement/: AmbitionManagement.csproj  AmbitionManagement.sln  Program.cs  Startup.cs
AmbitionManagementTests/: AmbitionManagementsTests.csproj  AmbitionsControllerTests.cs
Controllers/: GoalsController.cs  TablesController.cs
Expeditionsjournal.App/: .angular-cli.json  README.md  package-lock.json  package.json
Models/: Goal.cs  GoalEntity.cs
Monatsziele.Api/: Monatsziele.Api.csproj  Program.cs  appsettings.json
Monatsziele.Repository/: Class1.cs
api/: DomainProfile.cs  Monatsziele.Api.sln
docs/: index.html  styles.00d64f208aafee6baa14.css
expeditionsjournal-web/: README.md  angular.json  package-lock.json  package.json
monatsziele-api/: Monatsziele.Api.sln
src/: index.html  styles.css
templates/: index.html
(+191 files in other folders)
