[tool.poetry]
name = "Kurmann Monatsziele"
version = "0.1.0"
description = "CLI tool for goal management and tracking"
authors = ["Patrick Kurmann <kurmannwillisau@gmail.com>"]
dependencies = [
    "click = "^8.0"",
    "sqlalchemy = "^1.4""
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
