[tool.poetry]
name = "kurmann-monatsziele"
version = "0.1.0"
description = "CLI tool for goal management and tracking"
authors = ["Patrick Kurmann <kurmannwillisau@gmail.com>"]

packages = [
    { include = "kurmann_monatsziele", from = "src" },
    { include = "goals", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0"
sqlalchemy = "^1.4"
flask = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kurmann-monatsziele = "kurmann_monatsziele.cli:cli"
kurmann-webapp = "app:app"